2006-12-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/lob.c,
	  ext/oci8/metadata.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/tdo.c:
	    use RSTRING_LEN, RSTRING_PTR, RARRAY_LEN and RARRAY_PTR macros.

2006-11-25  KUBO Takehiro  <kubo@jiubao.org>
	* doc/oci8-ja.rb: add a new file for Japanese rdoc document.
	* ext/oci8/ocidatetime.c: add comments for rdoc.
	* test/test_datetime.rb: add testcases for OCI8::BindType::DateTime.

2006-11-23  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	    ext/oci8/oranumber.c: delete OraNumber implemented by C.
	* ext/oci8/metadata.c: use oci8_make_integer() instead of ora_number_to_str()
	    which was implemented in oranumber.c.
	* ext/oci8/ocinumber.c: add OCINumber#initialize_copy for OCINumber#copy.
	* lib/oci8.rb.in: delete "require 'oci8/interval.rb'".
	* lib/oci8/oci8.rb: remove OraNumber-related code.
	* lib/oci8/compat.rb: add emulation code of OraNumber by using OCINumber.
	* test_oranumber.rb: use assert_in_delta when comparing Float value.

2006-11-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c: bind types for interval_ym and interval_ds
	    are now Rational instread of OCI8::IntervalYM and OCI8::IntervalDS.
	* lib/oci8/interval.rb: delete OCI8::IntervalYM and OCI8::IntervalDS.
	* lib/oci8/oci8.rb: delete OCI8::IntervalYM and OCI8::IntervalDS.
	* test/test_all.rb: call testcases for timestamps and intervals.
	* test/test_datetime.rb: add testcases for timestamps and intervals.

2006-11-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: fix the default value of OCI8#long_read_len.
	* ext/oci8/stmt.c: fix bug when execute RENAME statement.
	* test/test_oci8.rb: add testcases for above two problems.
	    The testcases are contributed by Pete Schwamb.
