@@ -1,3 +1,8 @@
+2006-12-07  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c, ext/oci8/tdo.c:
+	   delete rlen and use_rlen from oci8_bind_t.
+	* ext/oci8/rowid.c: change the bind type for ROWID not to use rlen.
+
 2006-12-05  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/lob.c,
 	  ext/oci8/metadata.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
